# AbschlussprojektProgrammieruebung

./: README.md  app.py  pyproject.toml  requirements.txt
data/: anna_schneider_noisy.csv  klaus_wagner_arrhythmia.csv  maria_hoffmann_normal.csv  patient_001_normal.csv  patient_002_normal.csv  patient_002_tachycardia.csv  patient_003_normal.csv  patient_004_normal.csv  patient_005_normal.csv  patient_006_normal.csv  patient_007_tachycardia.csv  patient_008_tachycardia.csv  patient_009_tachycardia.csv  patient_010_tachycardia.csv  patient_011_tachycardia.csv  patient_012_tachycardia.csv  patient_013_bradycardia.csv  patient_014_bradycardia.csv  patient_015_bradycardia.csv  patient_016_bradycardia.csv  patient_017_bradycardia.csv  patient_018_bradycardia.csv  patient_019_arrhythmia.csv  patient_020_arrhythmia.csv  patient_021_arrhythmia.csv  patient_022_arrhythmia.csv  patient_023_arrhythmia.csv  patient_024_arrhythmia.csv  patient_025_noisy.csv  patient_026_noisy.csv  patient_027_noisy.csv  patient_028_noisy.csv  patient_029_noisy.csv  patient_030_noisy.csv  sabine_mueller_bradycardia.csv  thomas_berger_tachycardia.csv
database/: database_connection.py
ekg_processing/: ekg.py
machine_learning/: base_model.py  model_trainer.py  prediction.py  random_forest.py
machine_learning/models/: ekg_model.pkl
reports/: reports.py
