[project]
name = "AbschlussprojektProgrammieruebung"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "LuisWalcherMCI", email = "lwalcher@tsn.at"},
]
dependencies = ["pymysql>=1.2.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
