[project]
name = "AbschlussprojektProgrammieruebung"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "LuisWalcherMCI", email = "lwalcher@tsn.at"},
]
dependencies = ["pymysql>=1.2.0", "streamlit>=1.58.0", "plotly-express>=0.4.1", "joblib>=1.5.3", "scikit-learn>=1.9.0", "reportlab>=5.0.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
